spacing solve

--- a/src/RegForm/FinalStep/FinalStep.css
+++ b/src/RegForm/FinalStep/FinalStep.css
@@ -14,7 +14,7 @@
 }
 
 .btn-box Button {
-  padding: 14px 60px;
+  padding: 3vh 7vw;
   font-size: 1.05rem;
   font-weight: bold;
   margin: 10px 0;
