--- a/src/RegForm/OptionalInfo/StudentInfo/StudentInfo.css
+++ b/src/RegForm/OptionalInfo/StudentInfo/StudentInfo.css
@@ -3,20 +3,21 @@
   background-color: #ffffff;
   border: 1px solid #e7e8fa;
   border-radius: 15px;
-  padding: 20px 20px 20px 40px;
+  padding: 2vw;
 }
 .student-info .input-field {
-  padding: 10px 5px;
+  padding: 10px 1vw;
+  margin: auto;
 }
 .student-info .input-field label {
-  width: 150px;
+  width: 200px;
   display: inline-block;
   font-weight: bold;
   color: #616365;
 }
 .student-info .input-field input {
   height: 40px;
-  width: 16rem;
+  width: 42vh;
   background: #fafafa;
   border: 2px solid #e5e5e5;
   border-radius: 5px;
